<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hanifhasan007.weatherapp.fragments.fragmentForecast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:text="@string/day"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/weatherIconImageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight=".25" />


        <TextView
            android:id="@+id/highTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/high"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lowTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/highTemperatureTextView"
            android:layout_weight=".25"
            android:text="@string/low"
            android:textAlignment="center"
            android:textColor="@color/light_text" />


    </LinearLayout>



</RelativeLayout>