<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_na"
    android:scrollbars="none"
    tools:context=".WeatherActivity"
    tools:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="50dp"
            android:text="@string/location"

            android:textColor="@android:color/white"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/conditionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationTextView"
            android:layout_centerHorizontal="true"
            android:text="@string/condition"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <LinearLayout
            android:id="@+id/temperatureLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conditionTextView"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">


            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/na" />

            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/temp"
                android:textColor="@android:color/white"
                android:textSize="70sp"
                android:onClick="tempFormat"/>


        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/temperatureLayout"
            android:background="?android:attr/listDivider" />



        <TableLayout
            android:id="@+id/forecastContainer"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temperatureLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"

            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="TODAY"
                    android:textColor="@color/light_text"
                    android:paddingLeft="10dp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/forecast_0"
                    android:name="com.hanifhasan007.weatherapp.fragments.fragmentForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_forecast" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Forecast(1 week)"
                    android:textColor="@color/light_text"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/forecast_1"
                    android:name="com.hanifhasan007.weatherapp.fragments.fragmentForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_forecast" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/forecast_2"
                    android:name="com.hanifhasan007.weatherapp.fragments.fragmentForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_forecast" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/forecast_3"
                    android:name="com.hanifhasan007.weatherapp.fragments.fragmentForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_forecast" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/forecast_4"
                    android:name="com.hanifhasan007.weatherapp.fragments.fragmentForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_forecast" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/forecast_5"
                    android:name="com.hanifhasan007.weatherapp.fragments.fragmentForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_forecast" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/forecast_6"
                    android:name="com.hanifhasan007.weatherapp.fragments.fragmentForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_forecast" />
            </TableRow>


        </TableLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/forecastContainer"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/divider1"
            android:id="@+id/sunTextLayout"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textColor="@color/light_text"
                android:paddingLeft="20dp"
                android:layout_weight=".5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"
                android:textColor="@color/light_text"
                android:paddingLeft="20dp"
                android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/sunTextLayout"
            android:id="@+id/sunLayout"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/sunriseTextView"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/sunrise"
                android:textColor="@android:color/white"
                tools:layout_weight=".5"
                android:textSize="25dp"/>

            <TextView
                android:id="@+id/sunsetTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/sunset"
                android:textColor="@android:color/white"
                android:layout_weight=".5"
                android:textSize="25dp"/>

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/sunLayout"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/sunLayout"
            android:id="@+id/him_preeTextLayout"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/light_text"
                android:paddingLeft="20dp"
                android:layout_weight=".5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/light_text"
                android:paddingLeft="20dp"
                android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/him_preeTextLayout"
            android:id="@+id/him_PreeLayout"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_weight=".5"
                android:text="@string/humidity"
                android:textColor="@android:color/white"
                android:textSize="25dp"/>

            <TextView
                android:id="@+id/pressureTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_weight=".5"
                android:text="@string/pressure"
                android:textColor="@android:color/white"
                android:textSize="25dp"/>




        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/him_PreeLayout"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/divider4"
            android:id="@+id/visi_wiindLayoutText"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:textColor="@color/light_text"
                android:paddingLeft="20dp"
                android:layout_weight=".5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wind"
                android:textColor="@color/light_text"
                android:paddingLeft="20dp"
                android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/visi_wiindLayoutText">

            <TextView
                android:id="@+id/visibilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_weight=".5"
                android:text="@string/visibility"
                android:textColor="@android:color/white"
                android:textSize="25dp"/>

            <TextView
                android:id="@+id/windTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_weight=".5"
                android:text="@string/wind"
                android:textColor="@android:color/white"
                android:textSize="25dp"/>

        </LinearLayout>





    </RelativeLayout>


</ScrollView>